--- a/世界/11文化.md
+++ b/世界/11文化.md
@@ -14,3 +14,6 @@
 
 # 男女平等に関する状況
 いわゆる男女平等は高い水準にある。これは魔法による力の行使は才能の別はあるものの男女の別はないためである。魔法の才能による蔑視は存在する。魔導の追求による負傷及び死傷は称賛されており、墓地『アルトグレイブ』に埋葬される。
+
+# 医療術
+医療術は魔法によらない治療方法であるが、魔法による治療を司る団体から迫害されるため、ほとんど発達し得ない。
