--- a/世界/13生態系.md
+++ b/世界/13生態系.md
@@ -12,3 +12,6 @@
 
 # 領域理論
 余情資源理論などから同じ領域に複数の生体が生じる素地があると生体と生体が衝突する。このとき、衝突点における高い強度を持った生体が自己の領域を拡大し、相手の領域を奪う。衝突は衝突点のエネルギー差によって衝突の強度が決まり、それぞれの生体の領域保持力によって、自分の領域が保全できるかどう決まる。
+
+# 魔法闇
+ヤミ。一定以上のオド濃度が一定範囲に集まると黒い霧のようなヤミが生じる。都市化した魔法文明は常にこの問題にさらされる。また、森の中から過剰に魔物を刈り取ってしまうとやはりヤミが生じる。
