--- a/世界/09技術.md
+++ b/世界/09技術.md
@@ -12,6 +12,7 @@
 
 # 転生
 異世界などから人を転生させる。高度かつ膨大な魔法力を必要とするが転生そのものに必要な訳ではない。神が神意によって行うものを神意転生といい、人間が人工的に起こすものを人意転生という。人がそれを起こすには神へと想いを届けなければならず、そのために死者が生ずるほどである。
+グランドクロス。天体の一致が必要。
 
 # 刻印術
 特定の魔法を発揮する陣を予め物質に埋め込む技術。魔法のスクロールや魔法剣に使われる。
