--- a/世界/06魔法.md
+++ b/世界/06魔法.md
@@ -38,4 +38,14 @@
 
 # 起動式
 起動式（ディスト）
-魔法を起動するにあたってエーテルからマナを抽出する。この起動式の発明からすべての魔法文明が始まった。マナはエーテルと接すると魔法を起動できない。マナをエーテルから隔離することで魔法を起動できる。もちろんこのことはあとからわかったことであり、最初から分かっていたわけではない。
+魔法を起動するにあたって結界内のエーテルからマナを抽出する。この起動式の発明からすべての近代魔法文明が始まった。マナはエーテルと接すると魔法を起動できない。マナをエーテルから隔離することで魔法を起動できる。もちろんこのことはあとからわかったことであり、最初から分かっていたわけではない。
+
+# 原始魔法
+個体固有のマナを利用した魔法。原始魔法文明並びに高度ではない魔物はこれによる魔法を行使する。
+個体内マナ総量による魔法行使のため、原始魔法時代ではマナ総量の多い人間が高い評価を受けていたと言われている。
+個体内マナはしようした後、生じたオドはじんわりと周囲へと拡散し、マナが浸透してくる。
+
+# オド排出
+原始魔法使用後のオドを排出する工程。原理的に、これによって連続的な魔法行使が可能と考えられているが、
+オドの支配力が不完全であり実現できなかった。エーテル体を排出してしまい、死亡した例も。
+魔族はオド排出が可能だが、オド自体を利用する魔術があるため、オド排出をする必要がない。
