--- a/世界/09技術.md
+++ b/世界/09技術.md
@@ -4,6 +4,10 @@
 # 魔導鎧
 魔法力を使って運動させる鎧。通常の鎧より一回り大型であることが多い。魔法力を使うことで防御力の向上、攻撃力の向上などが期待できる。全体型の魔導鎧は常に魔力を必要とし、活動時間が短い。発達するに連れ、部分的な魔導鎧や乗り物型の魔導車などへと発展。また王国などには決戦兵器型の巨大魔導鎧があると言われている。
 
+# 端子
+魔導鎧もしくはゴーレムなどで魔法耐性の高い外装の場合、内側から補助魔法をかけることができる端子。
+
+
 # 念話網
 念話（テレパシー）によって情報交換されるネットワーク。軍隊内や王国間、各国ギルド間などに形成されている。通常、受発信担当の専任の念話官を置くことが多い。とある国は念話を自動的に書に書き起こす魔道具を持っているとかいないとか。
 
