--- a/世界/08魔界.md
+++ b/世界/08魔界.md
@@ -16,3 +16,12 @@
 # ヒト族
 ヒト。マナやオドを使うことができずエーテル感知能力を持たない。その昔、滅びた。現在の人間族によって滅ぼされた。
 魔族領の奥深くに生き残りが住んでいるという噂もある。
+
+# 七つの大罪
+「傲慢」= ありとあらゆる称賛
+「嫉妬(ねたみ)」= 贔屓、特別であること
+「憤怒」 = 正義の執行
+「怠惰」 = 無制限に不労の生活
+「強欲(貪欲)」 = 無限の財宝
+「暴食(貪食)」 = 無限のグルメ
+「色欲」　= 無限の幸せ
