--- a/世界/17社会.md
+++ b/世界/17社会.md
@@ -8,3 +8,12 @@
 ギルドの裏門の通称。販売者などの不法者を取り締まる冒険者群。
 ギルドと同じようにクエスト形式で社会治安を取り締まっている。
 通常のクエストよりも危険性が高い。
+
+# サンザ
+ヤクザのこと
+
+# ツカエ
+カタギのこと
+
+# ツカエ殺し
+ツカエの殺しはサンザの禁忌。粛清対象。
