--- a/世界/17社会.md
+++ b/世界/17社会.md
@@ -9,14 +9,15 @@
 ギルドと同じようにクエスト形式で社会治安を取り締まっている。
 通常のクエストよりも危険性が高い。
 
-# サンザ
-ヤクザのこと
+# 城外
+ヤクザのこと。
+その昔、城下町の壁の内側に入ることができなかった被差別階層のならず者を意味する。
 
-# ツカエ
+# 城内
 カタギのこと
 
-# ツカエ殺し
-ツカエの殺しはサンザの禁忌。粛清対象。
+# 城内殺し
+城内殺しは城外の禁忌。粛清対象。
 
 # 暗闘術
 感知に引っかからない魔法発動技術。対人戦闘、肉弾戦が中心。
