--- a/世界/11文化.md
+++ b/世界/11文化.md
@@ -19,3 +19,6 @@
 医療術は魔法によらない治療方法であるが、魔法による治療を司る団体から迫害されるため、ほとんど発達し得ない。
 出産を支援する魔法は古来より利用されており、安全な出産が可能。低出力の治癒魔法を継続的にかけ続けることで出産時のトラブルがリガバリされる。
 なお高出力治癒魔法によって赤子が母胎に吸収されてしまったという事件が存在している。
+
+# ヤルタ賞
+優れた魔法研究に送られる賞。基礎魔法分野、応用魔法分野、生活魔法分野、軍事魔法分野などがある。
