--- a/世界/17社会.md
+++ b/世界/17社会.md
@@ -4,10 +4,13 @@
 # 非合法組織
 暴力を含む非合法組織と抗争
 
+# 王国兵士団
+元々は治安維持と魔物討伐を担っていたが、裏門の登場により大型の魔物討伐に特化。
+
 # 裏門
 ギルドの裏門の通称。販売者などの不法者を取り締まる冒険者群。
 ギルドと同じようにクエスト形式で社会治安を取り締まっている。
-通常のクエストよりも危険性が高い。
+通常のクエストよりも危険性が高い。対人取締に特化している。
 
 # 城外
 ヤクザのこと。
