--- a/世界/18世界.md
+++ b/世界/18世界.md
@@ -3,3 +3,7 @@
 # 相補性
 魔物はヒトの発生させるオドを必要とし、生態系はオドが霧散したリエーテルを必要とし、ヒト
 リエーテルから生態系が生成したマナを必要とする。
+
+# 三分位点
+マナ族とオド族は相補関係にあり、均衡点からエーテル占有率が高まるほど優位になるが、
+侵出が進み、三分位点を越えると、自壊し始める。
