--- a/世界/18世界.md
+++ b/世界/18世界.md
@@ -1,7 +1,7 @@
 # 世界のシステム
 
 # 相補性
-魔物はヒトの発生させるオドを必要とし、生態系はオドが霧散したリエーテルを必要とし、ヒト
+オド族である魔物はヒトの発生させるオドを必要とし、エーテル族である生態系はオドが霧散したリエーテルを必要とし、ヒトなどのマナ族は
 リエーテルから生態系が生成したマナを必要とする。
 
 # 三分位点
