--- a/小説論/異世界物語への希望.md
+++ b/小説論/異世界物語への希望.md
@@ -45,3 +45,8 @@ https://www.youtube.com/watch?v=sh0ZRN-FYDI
 領主型は潤沢なリソースとコミュニティへの大きな貢献によって、大きなリソースが確保され、主人公は全面的に善行を実施できる。
 戦争となる場合にあっても、大義は主人公の側にあり、悪を打ち倒す物語が展開される。
 
+## ブラックジャック
+ブラックジャックは対価に大金を要求することによって、完全なる善行を実施しようとした主人公の物語であるといえるかもしれない。
+このシステムを利用したのが、以前カクヨムに書いた「勇者ビジネスはじめました。」だった。今読み直しても面白かった。
+しかし、問題は貨幣経済や圧倒的な力から抜け出せないことである。が、刃牙しかりその他の物語しかり、物語の根幹かもしれない。
+
