--- a/小説論/異世界物語への希望.md
+++ b/小説論/異世界物語への希望.md
@@ -49,4 +49,6 @@ https://www.youtube.com/watch?v=sh0ZRN-FYDI
 ブラックジャックは対価に大金を要求することによって、完全なる善行を実施しようとした主人公の物語であるといえるかもしれない。
 このシステムを利用したのが、以前カクヨムに書いた「勇者ビジネスはじめました。」だった。今読み直しても面白かった。
 しかし、問題は貨幣経済や圧倒的な力から抜け出せないことである。が、刃牙しかりその他の物語しかり、物語の根幹かもしれない。
+また、ブラックジャックシステムは資本主義経済における再配分の形態をもっている。というのも、一人の大金持ちから集金するのも、貧乏人から集金するのもコストは同じであるばかりか
+貧乏人から集金するコストの方が大きいからである。そのため、大金持ちからは集金しやすい。
 
