--- a/世界/17社会.md
+++ b/世界/17社会.md
@@ -47,3 +47,7 @@
 # 魔物利権
 魔物は素材にも名誉にもなるため、国境を越えて移動すると小競り合いの元になる。
 場合によっては合意の上または合意なく他国領で狩りをすることも。
+
+# 素養のレアリティ
+いわゆる星数。判別方法が表れるとSS,S,A,B,C,D,Eなど生まれ持っての素養が検出されうる。
+但し、それは一体なんなのか、謎は深まる。
