--- a/世界/13生態系.md
+++ b/世界/13生態系.md
@@ -15,3 +15,7 @@
 
 # 魔法闇
 ヤミ。一定以上のオド濃度が一定範囲に集まると黒い霧のようなヤミが生じる。都市化した魔法文明は常にこの問題にさらされる。また、森の中から過剰に魔物を刈り取ってしまうとやはりヤミが生じる。
+
+# スタンピード
+魔物大発生。なんらかの生態系バランスが崩れると大量の魔物が浸出してくる。
+蝗害。街を食い荒らす。
