--- a/世界/17社会.md
+++ b/世界/17社会.md
@@ -51,3 +51,7 @@
 # 素養のレアリティ
 いわゆる星数。判別方法が表れるとSS,S,A,B,C,D,Eなど生まれ持っての素養が検出されうる。
 但し、それは一体なんなのか、謎は深まる。
+
+# アンカー
+Anchor 城などを中心とした都市に結界を張るため、中核にすえられた魔法使いの女達のこと。
+複数人の交代制だが、ほとんど外に出ることができない。
