--- a/世界/05物語.md
+++ b/世界/05物語.md
@@ -192,6 +192,15 @@
 殴りかかってきた男
 ガンっと音がすると彼女はふわりと舞って後ろに着地した。
 
+# 魔女と勇者
+聖女は神託を受け勇者を召喚しようとした。
+しかし、王国社会は自らの手でこそ魔王討伐すべきと考えていた。
+強行な手段で勇者を召喚した聖女は、魔女として蔑まれ、石を投げられるような、
+存在になった。
+それでも彼女の愛した世界を守るため、召喚された勇者は魔王を打ち倒す
+旅に出るのだった。
+
+
 # 弱気勇者の旅路
 
 # その者弱き神のため人威を振るう
