--- a/世界/11文化.md
+++ b/世界/11文化.md
@@ -16,4 +16,7 @@
 いわゆる男女平等は高い水準にある。これは魔法による力の行使は才能の別はあるものの男女の別はないためである。魔法の才能による蔑視は存在する。魔導の追求による負傷及び死傷は称賛されており、墓地『アルトグレイブ』に埋葬される。
 
 # 医療術
-医療術は魔法によらない治療方法であるが、魔法による治療を司る団体から迫害されるため、ほとんど発達し得ない。
+医療術は魔法によらない治療方法であるが、魔法による治療を司る団体から迫害されるため、あまり発達し得ない。
+
+# 宇宙開発
+エーテル体は宇宙空間にも存在しており、いわゆる科学文明よりも宇宙開発の潜在能力は高い。そのため、文明が進むと惑星間転移魔法による惑星間の移動並びに侵略が起こる。進んだ魔法運命においては異世界転生は惑星間転移魔法の一種であると考えられている。
