--- a/世界/06魔法.md
+++ b/世界/06魔法.md
@@ -49,3 +49,10 @@
 原始魔法使用後のオドを排出する工程。原理的に、これによって連続的な魔法行使が可能と考えられているが、
 オドの支配力が不完全であり実現できなかった。エーテル体を排出してしまい、死亡した例も。
 魔族はオド排出が可能だが、オド自体を利用する魔術があるため、オド排出をする必要がない。
+
+# マナ支配領域
+エリア。マナを吸収できるエリア。段階的な限界があり、その度に技術的なブレークスルーを必要とする。
+星系マナ支配理論。星の半径の√2倍を越えたエリア半径を持つと惑星全体の半分のマナを支配でき、
+大気圏を含む星の直径より大きいエリア半径を持つと惑星全体のマナを支配できる。（理論上）
+エリア中心点移動。エリアの展開中心点を移動させる技術。発達すると星の直径と同じエリア直径で星のマナを支配できる。
+また、高度に発達すると敵の魔法を封じ、自分だけが魔法を展開できる。
