--- a/世界/14災害.md
+++ b/世界/14災害.md
@@ -3,3 +3,8 @@
 
 # マナ嵐
 マナ嵐はマナ密度の濃い奔流が地域を通過すること。うまく用いると非常に強大な魔法を行使できるが、暴発の危険性も高まる。異世界からの召喚にはあらゆる惑星位置が特定の配置であり、その時生じる高濃度マナ嵐が必要。オド嵐もあるがエーテル嵐はない。
+
+# ダンジョンハザード
+迷宮（ダンジョン内）の魔物が溢れ出してくること。
+実際には、迷宮入口、内部及び周囲に形成された防壁が魔物を蓄積し、破裂する。
+原始時代にはハザードはなく、魔物は周囲に少しずつ漏れていた。
