--- a/世界/21材料.md
+++ b/世界/21材料.md
@@ -10,4 +10,5 @@
 魔法剣がより一般的になる過程で求められる能力も変化し、貴族間のパワーバランスが変わり栄枯盛衰が起こる。
 材料技術は特に城壁や防具において顕著にその影響をもたらす。
 魔導砲などが登場するとまた変わる。
-魔法剣では魔法の切払いができるようになる。
+魔法剣では魔法の切払いができるようになる。スタッフでは魔法を払う強度がなく魔法が衝突すると折れてしまう。スタッフでは防壁による魔法防御が一般的である。
+一部の戦闘に特化した超高位の魔道士が十分に集中力を発揮するとスタッフによる切払いも可能であるらしい。
