--- a/世界/23知能.md
+++ b/世界/23知能.md
@@ -4,6 +4,7 @@
 それが物語上、やむを得ない場合はもちろんそれでいいのだが、リアルとは言えない。
 まず建築物が存在するとき、その建築物が現代の物理的な論理ではなく職人の直感的な感覚によって作られたということになる。
 勿論、経験や徒弟制度による伝承も含まれるが、最も重要な点は物理的な物体の運動や応力並びに強度について
-彼らは感覚的に理解しており、そういった感性が現代科学文明の石末となったのである。
+彼らは感覚的に理解しており、そういった感性が現代科学文明の礎となったのである。
 ある物体、例えば剣や建物の形状や配置をどうすればよいかということを彼らは数多の試行錯誤の中から体得しており
-彼らはどちらかといえば現代におけるAIの振る舞いに似ている。なぜいいのかはわからないがそれがいいということは分かるのである。
+彼らはどちらかといえば現代におけるAIの振る舞いに似ている。なぜいいのかはわからないがそれがいいということは分かるし、ある形が良くないということも分かるのである。
+説明はできないとしても。
