--- a/世界/06魔法.md
+++ b/世界/06魔法.md
@@ -56,3 +56,16 @@
 大気圏を含む星の直径より大きいエリア半径を持つと惑星全体のマナを支配できる。（理論上）
 エリア中心点移動。エリアの展開中心点を移動させる技術。発達すると星の直径と同じエリア直径で星のマナを支配できる。
 また、高度に発達すると敵の魔法を封じ、自分だけが魔法を展開できる。
+
+# 回復魔法
+回復魔法はゲーム由来の世界においてプレイヤーのHPを回復させる働きを持つ魔法群である。
+しかしその原理からいってその効能の範囲はもっと広いと考えられる。
+擦り傷、切り傷など自然治癒力の範囲内において人間を回復させられる術式は、動物はもとより植物への作用も可能であると思われる。
+このとき、飢饉などによって損傷を受けた植物群を回復しうる。また更に問題があるのは、食肉を切り取った後回復しうるかということで、
+可能であれば、魔法世界には食肉工場がかなり早い段階から存在することになる。
+氷系魔法による冷却もあることを考えると、現代よりも更に未来的な食糧事情を形成している可能性があり
+また、そのことからくる高密度都市が形成されうる。つまり、古西洋風の街並みでありながら、東京のような過密都市を維持しうるということになる。
+またこのとき、ウイルスならびに感染症が猛威を振るうが、これについても魔法的に解決されうる。
+食肉工場の成立が可能かどうかと並んで問題となるのが、プラナリア問題である。2つに分割した個体に回復魔法をかけると、2つの個体として回復するのかどうかという点である。
+もしこれがなんらかの世界的背景によって困難であるとしても、食べた分わ回復しえれば食肉工場は可能となる。
+またプラナリアが可能であると、クローン個体の生産が可能となる。
